# todo-app-evolution-hackathon

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  PHASE_2_COMPLETE.md  README.md  pdf_summary.txt  postman_collection.json  prompt.md  pyproject.toml  spec_kit_plus_mcp.py
.claude/: settings.json  settings.local.json
.claude/agents/: api-contract-designer.md  database-designer-agent.md  fastapi-dev-agent.md  nextjs-dev-agent.md
.specify/memory/: constitution.md
backend/: .env.example  .gitignore  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  alembic.ini  db.py  docker-compose.yml  main.py  models.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: config.py  database.py  main.py
backend/app/api/: deps.py
backend/app/api/routes/: auth.py  todos.py
backend/app/core/: middleware.py  security.py
backend/app/models/: session.py  todo.py  user.py
backend/app/schemas/: auth.py  todo.py
backend/app/services/: auth_service.py  todo_service.py
backend/middleware/: jwt_auth.py
backend/routes/: auth.py  tasks.py
backend/schemas/: auth.py  tasks.py
backend/tests/: dummy.py  test_auth.py  test_todos.py  verify_implementation.py  verify_postgres_migration.py
backend/utils/: security.py
frontend/: README.md  package-lock.json  package.json
frontend/components/: LoginForm.tsx  SignupForm.tsx  TodoForm.tsx  TodoList.tsx
frontend/contexts/: auth.tsx
frontend/src/: middleware.ts
specs/1-phase1-core/: plan.md  spec.md  tasks.md
specs/1-web-todo-management/: plan.md  spec.md  tasks.md
specs/1-web-todo-management-backend/: tasks.md
specs/2-frontend-spec/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/todo_app/: main.py  models.py  storage.py  todo_manager.py  validation.py
(+83 files in other folders)
