[project]
name = "todo-app"
version = "0.1.0"
description = "A console-based todo application for Hackathon II"
authors = [
    {name = "Claude Code", email = "noreply@anthropic.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
todo-app = "todo_app.main:main"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "mypy>=1.8.0",
    "black>=24.0.0",
    "flake8>=7.0.0"
]